kubernetes/app/paperless/statefulset-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless-db
  namespace: paperless
  labels:
    app: paperless-db
spec:
  serviceName: paperless-db
  replicas: 1
  selector:
    matchLabels:
      app: paperless-db
  template:
    metadata:
      labels:
        app: paperless-db
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:18
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: nfs-synology-ssd
        resources:
          requests:
            storage: 5Gi
