kubernetes/app/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
spec:
  selector:
    app: paperless
  ports:
    - port: 8000
      targetPort: 8000
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-db
  namespace: paperless
spec:
  clusterIP: None
  selector:
    app: paperless-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis
  namespace: paperless
spec:
  selector:
    app: paperless-redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
  namespace: paperless
spec:
  selector:
    app: paperless-gotenberg
  ports:
    - port: 3000
      targetPort: 3000
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
  namespace: paperless
spec:
  selector:
    app: paperless-tika
  ports:
    - port: 9998
      targetPort: 9998
      name: http
